fix(S1-04): align audit service wiring and actor role filters
- Rename LogFilter role field/accessors to actorRole
- Update AuditService filtering to use actorRole consistently
- Add AppController injection path for FileCryptoService
- Reject FileCryptoService instances backed by a different AuditService
- Preserve FileCryptoService UserContext APIs with shared audit logging
- Expand AppController tests for shared audit service behavior

Closes #37